# fillit

./: CMakeLists.txt  Makefile  README.md  author  checks.c  figures_code.c  figures_list.c  fillit  fillit.h  main.c  read.c  salvation.c  solutions_list.c  t_solution.c
fillit/: CMakeLists.txt  figures_code.c  figures_list.c  fillit.h  get_next_line.c  main.c  qwerty  read.c  salvation.c  solutions_list.c
includes/: fillit.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_put_errmsg.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+28 more)
srcs/: checks.c  clean.c  figures_code.c  main.c  prepare.c  read.c  solution.c  t_figure.c  t_solution.c
tests/: fillit  test.sh
tests/maps1/: test10  test11  test12  test14  test15  test17  test4  test6
tests/maps2/: test11  test12  test13  test14  test15  test16  test17  test5  test6  test7  test8  test9
tests/maps3/: test10  test3  test6  test7  test8  test9
